# clipper-ai

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: clips.py  jobs.py  process.py
backend/app/core/: celery_app.py  config.py
backend/app/models/: clip.py  job.py
backend/app/pipeline/: analyzer.py  audio.py  clip_export.py  detect_types.py  downloader.py  groq_highlights.py  hybrid_engine.py  signal_detect.py  transcribe_whisper.py  transcriber.py
backend/app/tasks/: pipeline_task.py
frontend/: next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ClipCard.tsx  ExportPanel.tsx  JobProgress.tsx  UrlInputPanel.tsx
frontend/src/hooks/: useJobSSE.ts
